<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <fr.neamar.kiss.ui.WidgetScrollView
        android:id="@+id/widgetScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/resultLayout"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:fillViewport="true">

        <!-- Vertically scrolling widget area: hosts an unlimited number of widgets in minimalistic mode -->
        <LinearLayout
            android:id="@+id/widgetLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" />
    </fr.neamar.kiss.ui.WidgetScrollView>

    <FrameLayout
        android:id="@+id/resultLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/externalFavoriteBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_marginStart="@dimen/list_margin_horizontal"
        android:layout_marginLeft="@dimen/list_margin_horizontal"
        android:layout_marginEnd="@dimen/list_margin_horizontal"
        android:layout_marginRight="@dimen/list_margin_horizontal"
        android:layout_marginBottom="10dp"
        android:background="?attr/listBackgroundColor"
        android:elevation="2dp"
        android:visibility="gone"
        tools:visibility="visible">

        <fr.neamar.kiss.ui.AnimatedListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|center_horizontal"
            android:cacheColorHint="@android:color/transparent"
            android:divider="?attr/dividerDrawable"
            android:dividerHeight="1dp"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            tools:listitem="@layout/item_app" />

        <fr.neamar.kiss.ui.BottomPullEffectView
            android:id="@+id/listEdgeEffect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/externalFavoriteBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/favorite_height"
        android:layout_above="@id/searchEditLayout"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/searchBackgroundColor"
        android:elevation="2dp"
        android:gravity="center_vertical"
        android:importantForAccessibility="no"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        app:reverseLayout="true"
        tools:listitem="@layout/favorite_item"
        tools:spanCount="5" />

    <RelativeLayout
        android:id="@+id/searchEditLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/searchBackgroundColor"
        android:clipToPadding="false"
        android:elevation="2dp">

        <FrameLayout
            android:id="@+id/leftHandSideButtonsWrapper"
            android:layout_width="@dimen/launcher_button_width"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">


            <ImageView
                android:id="@+id/launcherButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/appSelectableItemBackground"
                android:contentDescription="@string/main_kiss"
                android:focusable="true"
                android:paddingStart="@dimen/launcher_button_padding"
                android:paddingLeft="@dimen/launcher_button_padding"
                android:paddingEnd="@dimen/launcher_button_padding"
                android:paddingRight="@dimen/launcher_button_padding"
                android:src="@drawable/ic_launcher_white"
                android:tag="showMenu"
                app:tint="?attr/colorPrimary" />

            <ProgressBar
                android:id="@+id/loaderBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:paddingStart="@dimen/launcher_button_padding"
                android:paddingLeft="@dimen/launcher_button_padding"
                android:paddingEnd="@dimen/launcher_button_padding"
                android:paddingRight="@dimen/launcher_button_padding"
                android:visibility="invisible" />

        </FrameLayout>

        <fr.neamar.kiss.ui.SearchEditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_margin="1dp"
            android:layout_toStartOf="@id/rightHandSideButtonsWrapper"
            android:layout_toEndOf="@id/leftHandSideButtonsWrapper"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:hint="@string/ui_search_hint"
            android:imeOptions="flagNoExtractUi|actionSearch"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:singleLine="true"
            android:textColor="?attr/searchColor"
            android:textColorHint="?android:attr/textColorSecondary"
            android:textCursorDrawable="@null"
            android:textDirection="locale"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/rightHandSideButtonsWrapper"
            android:layout_width="@dimen/launcher_button_width"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/menuButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/appSelectableItemBackground"
                android:contentDescription="@string/main_menu"
                android:focusable="true"
                android:paddingStart="@dimen/launcher_button_padding"
                android:paddingLeft="@dimen/launcher_button_padding"
                android:paddingEnd="@dimen/launcher_button_padding"
                android:paddingRight="@dimen/launcher_button_padding"
                android:src="@drawable/dots"
                app:tint="?attr/searchColor" />

            <ImageView
                android:id="@+id/clearButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/appSelectableItemBackground"
                android:contentDescription="@string/main_clear"
                android:focusable="true"
                android:paddingStart="@dimen/launcher_button_padding"
                android:paddingLeft="@dimen/launcher_button_padding"
                android:paddingEnd="@dimen/launcher_button_padding"
                android:paddingRight="@dimen/launcher_button_padding"
                android:src="@drawable/ic_close"
                android:visibility="visible"
                app:tint="?attr/searchColor" />
        </FrameLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/externalFavoriteBar"
        android:paddingBottom="10dp"
        android:visibility="visible"
        tools:visibility="gone">

        <include
            android:id="@+id/main_empty"
            layout="@layout/main_empty" />
    </ScrollView>

    <include
        android:id="@+id/mainKissbar"
        layout="@layout/main_kissbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/list"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        tools:ignore="DuplicateIncludedIds" />

</RelativeLayout>
