<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bar_height"
    android:background="?attr/colorPrimary"
    android:clipToPadding="false"
    android:elevation="2dp"
    tools:ignore="UnusedAttribute">

    <ImageView
        android:id="@+id/whiteLauncherButton"
        android:layout_width="@dimen/launcher_button_width"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/main_kiss_back"
        android:focusable="true"
        android:paddingStart="@dimen/launcher_button_padding"
        android:paddingLeft="@dimen/launcher_button_padding"
        android:paddingEnd="@dimen/launcher_button_padding"
        android:paddingRight="@dimen/launcher_button_padding"
        android:src="@drawable/ic_launcher_white"
        android:tag="hideMenu" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/embeddedFavoritesBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_toEndOf="@+id/whiteLauncherButton"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="1"
        app:reverseLayout="true"
        tools:layout="@layout/favorite_item"
        tools:listitem="@layout/favorite_item"
        tools:spanCount="5" />
</RelativeLayout>
