<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/item_search_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/search" />

    <TextView
        android:id="@+id/item_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_item_search"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>