<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/item_setting_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/settings" />

    <TextView
        android:id="@+id/item_setting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Setting name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>